# symbolic_approximation

./: Cargo.toml  README.md
crates/prime_store/: Cargo.toml
crates/prime_store/src/: lib.rs  primes.rs
crates/symbols/: Cargo.toml
crates/symbols/src/: as_value.rs  fun.rs  lib.rs  outcome.rs  primes.rs  value.rs  value_iterator.rs  var.rs
src/: as_value.rs  element.rs  fun.rs  gen.rs  gen_code.rs  main.rs  oldmain.rs  outcome.rs  par.rs  sequence.rs  test.jl  value.rs  var.rs
