[package]
name = "symbolic_approximation"
version = "0.1.0"
authors = ["Pawel Rynowiecki <pawel.rynowiecki@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
plotlib = "0.5.1"
rand = "0.7.3"
variant_count = "1.0.0"
num_enum = "0.5.0"
